# shindanmaker-rs

./: Cargo.toml  README.md
.github/: FUNDING.yml
.history/: Cargo_20220907224336.toml  Cargo_20220907225851.toml  Cargo_20220907225852.toml  Cargo_20220907225853.toml  Cargo_20220907225905.toml  Cargo_20220907225906.toml  Cargo_20220907225907.toml  Cargo_20220907225910.toml  Cargo_20220907225918.toml  Cargo_20220907225946.toml  Cargo_20220907230045.toml  Cargo_20220907230046.toml  Cargo_20220907230047.toml  Cargo_20220907230340.toml  Cargo_20220907230341.toml  Cargo_20220907230342.toml  Cargo_20220907230343.toml  Cargo_20220907230344.toml  Cargo_20220907230345.toml  Cargo_20220907230346.toml  Cargo_20220907230347.toml  Cargo_20220907230359.toml  Cargo_20220907230415.toml  Cargo_20220907230418.toml  Cargo_20220907230419.toml  Cargo_20220907230420.toml  Cargo_20220907230628.toml  Cargo_20220907230707.toml  Cargo_20220907230709.toml  Cargo_20220907230712.toml  Cargo_20220907230805.toml  Cargo_20220907230810.toml  Cargo_20220907230812.toml  Cargo_20220907230814.toml  Cargo_20220907231120.toml  Cargo_20220907231121.toml  Cargo_20220907231234.toml  Cargo_20220907231236.toml  Cargo_20220907231247.toml  Cargo_20220907231248.toml  (+34 more)
.history/src/: lib_20220907213855.rs  lib_20220907214026.rs  lib_20220907214027.rs  lib_20220907214029.rs  lib_20220907220354.rs  lib_20220907220355.rs  lib_20220907220357.rs  lib_20220907220444.rs  lib_20220907220445.rs  lib_20220907220446.rs  lib_20220907220449.rs  lib_20220907220450.rs  lib_20220907220454.rs  lib_20220907220456.rs  lib_20220907220458.rs  lib_20220907220501.rs  lib_20220907220502.rs  lib_20220907220504.rs  lib_20220907220505.rs  lib_20220907220509.rs  lib_20220907220510.rs  lib_20220907220511.rs  lib_20220907220512.rs  lib_20220907220513.rs  lib_20220907220522.rs  lib_20220907220523.rs  lib_20220907220524.rs  lib_20220907220525.rs  lib_20220907220526.rs  lib_20220907220530.rs  lib_20220907220531.rs  lib_20220907220532.rs  lib_20220907220534.rs  lib_20220907220540.rs  lib_20220907220541.rs  lib_20220907220542.rs  lib_20220907220544.rs  lib_20220907220615.rs  lib_20220907220616.rs  lib_20220907220618.rs  (+725 more)
examples/: any.rs  cli.rs  persona.rs
src/: card.rs  error.rs  lib.rs  utils.rs
