[package]
name = "shindanmaker-rs"
version = "0.2.9"
edition = "2021"
authors = ["sakunia <sakunia@foxmail.com>", "Collide <three-dim-sky@foxmail.com>"]
description = "Shindanmaker in Rust"
license = "MIT"
repository = "https://github.com/Sakura1943/shindanmaker-rs"
documentation = "https://docs.rs/shindanmaker-rs/latest/shindanmaker"
readme = "README.md"

[lib]
name = "shindanmaker"

[dependencies]
once_cell = "1.14.0"
reqwest = { version = "0.11.11", features = ["json", "cookies"] }
scraper = "0.13.0"
serde = { version = "1.0.144", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "persona"

[[example]]
name = "any"
